test/should-fail/函数定义重复.j
function test takes nothing returns nothing
endfunction
function test takes nothing returns nothing
endfunction